--- a/build.gradle
+++ b/build.gradle
@@ -19,17 +19,12 @@ repositories {
 
 dependencies {
 
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-
-    compile group: 'org.kohsuke', name: 'github-api', version: '1.116'
     compile group: 'org.yaml', name: 'snakeyaml', version: '1.27'
-    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-yaml', version: '2.11.3'
-    compile group: 'com.fasterxml.jackson.dataformat', name: 'jackson-dataformat-properties', version: '2.11.3'
-    compile group: 'org.apache.commons', name: 'commons-collections4', version: '4.4'
-
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
     compile group: 'org.springframework', name: 'spring-web', version: '5.2.9.RELEASE'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
 
+    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
 
