--- a/build.gradle
+++ b/build.gradle
@@ -20,9 +20,12 @@ repositories {
 dependencies {
 
     compile group: 'org.yaml', name: 'snakeyaml', version: '1.27'
-    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
+
     compile group: 'org.springframework', name: 'spring-web', version: '5.2.9.RELEASE'
     compile group: 'com.google.code.gson', name: 'gson', version: '2.8.6'
+
+    compile group: 'org.apache.commons', name: 'commons-lang3', version: '3.11'
+    compile group: 'org.apache.httpcomponents', name: 'httpclient', version: '4.5.13'
 
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
